examples/errors/parsing/let_annotated-empty-sort.cn
main : () [impure] =
  let a : = 1;
  ()
